kube-addons/grafana/2-grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  rules:
  - host: lunatech.grafana.hariprasad-karthigasu.info
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
